# ferric_api

./: .env.local  .env.production  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  justfile
actix-oauth/: Cargo.toml
actix-oauth-macro/: Cargo.toml
actix-oauth-macro/src/: inner.rs  lib.rs
actix-oauth/src/: error.rs  handler.rs  lib.rs  traits.rs  utils.rs
actix-oauth/src/dto/: authorization.rs  mod.rs  oauth_error.rs  oauth_request.rs  token_response.rs
actix-oauth/src/dto/oauth_client/: create.rs  mod.rs  update.rs
actix-oauth/src/handler/: builder.rs  default.rs  docs.rs  mod.rs
actix-oauth/src/traits/: auth_code_handler.rs  authorization_handler.rs  client_credentials_handler.rs  manager.rs  mod.rs  password_handler.rs  refresh_token_handler.rs
actix-oauth/src/types/: access_token.rs  authorization_code.rs  client_id.rs  client_secret.rs  grant_type.rs  mod.rs  password.rs  redirect_uri.rs  refresh_token.rs  scope.rs  scopes.rs  username.rs
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_oauth.down.sql  0002_oauth.up.sql  0003_row_level_security.down.sql  0003_row_level_security.up.sql
sqlx-filter-macro/: Cargo.toml
sqlx-filter-macro/src/: lib.rs  types.rs
src/: config.rs  constants.rs  env.rs  error.rs  lib.rs  logging.rs  main.rs  middleware.rs  openapi.rs  prelude.rs  state.rs  statics.rs  utils.rs
src/dto/: error.rs  llm.rs  mod.rs
src/dto/user/: create.rs  mod.rs
src/endpoints/: health.rs  mod.rs  not_found.rs
src/endpoints/api/: mod.rs
src/endpoints/api/v1/: ai.rs  mod.rs
src/endpoints/api/v1/clients/: get.rs  mod.rs  post.rs
src/endpoints/api/v1/oauth/: client.rs  mod.rs
src/endpoints/api/v1/users/: delete.rs  mod.rs  post.rs
src/endpoints/api/v1/users/get/: by_id.rs  mod.rs
src/endpoints/oauth/: client.rs  mod.rs
src/extractors/: mod.rs  user_context.rs
src/middleware/: mod.rs  rls_context.rs
src/models/: mod.rs  oauth_client.rs  oauth_token.rs  user.rs
src/repositories/: mod.rs  oauth_token.rs  users.rs
src/repositories/oauth_clients/: mod.rs
src/services/: health.rs  mod.rs
src/services/oauth/: mod.rs  password_handler.rs
src/setup/: app.rs  database.rs  mod.rs  server.rs
src/traits/: from_model.rs  into_dto.rs  mod.rs  model.rs  repository.rs  repository_rls.rs
src/traits/sql_filter/: and.rs  equals.rs  greater_than.rs  greater_than_or_equal.rs  i_like.rs  in.rs  less_than.rs  less_than_or_equal.rs  like.rs  mod.rs  not.rs  not_equal.rs  not_in.rs  or.rs  raw.rs
src/traits/sql_filter/implementations/: filter.rs  mod.rs
src/types/: mod.rs  user_context.rs
src/utils/: api_scope.rs  batch.rs  extractor.rs  header.rs  middleware_macros.rs  mod.rs  mod_def.rs  repository_rls_context.rs
src/utils/db/: mod.rs  sql_filter.rs
