[package]
name = "ferric_api"
description = "API for the ferric project"
version = "0.0.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://reasonably-happy-moose.ngrok-free.app/tosic.killer/ferric-api"
authors = ["tosic.killer"]

[dependencies]
actix = "0.13.5"
actix-web = "4.9"
actix-helper-utils ={ version = "0.0.1-alpha", registry = "gitea"}
actix-cors = "0.7.0"
dotenv = "0.15.0"
thiserror = "2.0.7"
tosic-utils = { version = "0.2.0", features = ["env", "dotenv"], registry = "gitea" }
tokio = { version = "1.42", features = ["full", "macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-core = "0.1.33"
serde = { version = "1.0.216", features = ["derive", "alloc", "rc"] }
serde_json = "1.0.133"
futures = "0.3.31"
utoipa = { version = "5.2.0", features = ["actix_extras", "debug", "rc_schema", "non_strict_integers"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
mime = "0.3.17"
validator ="0.19.0"

[features]
default = ["local"]
local = []
production = []

# use with `cargo build --profile release-dev` for more optimized builds
[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
