[workspace]
members = [
    ".",
    "actix-oauth"]
exclude = ["client"]

[workspace.dependencies]
actix = "0.13.5"
actix-web = { version = "4.9" }
actix-helper-utils ={ version = "0.0.2-alpha", registry = "gitea"}
#actix-helper-utils ={ git = "https://reasonably-happy-moose.ngrok-free.app/tosic.killer/actix-utils.git" }
# actix-helper-utils ={ path = "../actix-utils" }
actix-cors = "0.7.0"
actix-oauth = { version = "0.1.0", path = "actix-oauth" }
dotenvy = "0.15.0"
thiserror = "2.0.7"
tosic-utils = { version = "0.2.3", features = ["env", "dotenv", "tracing"], registry = "gitea" }
# tosic-utils = { version = "0.2.3", features = ["env", "dotenv", "tracing"], path = "../tosic-utils"  }
tokio = { version = "1.42", features = ["full", "macros", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-core = "0.1.33"
serde = { version = "1.0.216", features = ["derive", "alloc", "rc"] }
serde_json = "1.0.133"
futures = "0.3.31"
utoipa = { version = "5.2.0", features = ["actix_extras", "debug", "rc_schema", "non_strict_integers", "chrono", "uuid", "url"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
mime = "0.3.17"
validator ="0.19.0"
once_cell = "1.20.2"
sqlx = { version =  "0.8.3", features = ["postgres", "chrono", "macros", "migrate", "runtime-tokio", "uuid"] }
sqlx-utils = { git = "https://reasonably-happy-moose.ngrok-free.app/tosic.killer/sqlx-utils.git", default-features = false, features = ["postgres"] }
chrono = "0.4.39"
tosic-llm = { version = "0.1.0", git = "https://github.com/retrokiller543/tosic-llm.git", branch = "master" }

[package]
name = "ferric_api"
description = "API for the ferric project"
version = "0.0.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://reasonably-happy-moose.ngrok-free.app/tosic.killer/ferric-api"
authors = ["tosic.killer"]

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
actix-helper-utils ={ workspace = true }
actix-cors = { workspace = true }
actix-oauth = { workspace = true }
dotenvy = { workspace = true }
thiserror.workspace = true
tosic-utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-scalar = { workspace = true }
mime = { workspace = true }
validator = { workspace = true }
once_cell = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tracing-appender = "0.2.3"
constcat = "0.5.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
argon2 = { version =  "0.5.3", features = ["std"] }
paste = "1.0.15"
async-trait = "0.1.85"
itertools = "0.14.0"
sqlx-utils = { workspace = true }
tokio-stream = "0.1"
futures-util = "0.3"
bytes = { version = "1.10.0", features = ["serde"] }
tosic-llm.workspace = true

[build-dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tosic-utils = { workspace = true }
tracing = { workspace = true }

[features]
default = ["local"]
local = []
production = []

# use with `cargo build --profile release-dev` for more optimized builds
[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
