[package]
name = "actix-oauth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
actix-helper-utils ={ workspace = true }
actix-cors = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tosic-utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-scalar = { workspace = true }
mime = { workspace = true }
validator = { workspace = true }
once_cell = { workspace = true }
oauth2 = { version =  "5.0.0", features = ["timing-resistant-secret-traits"] }
rand = { version = "0.8.5" }
pin-project-lite = "0.2.15"
sqlx = { workspace = true }
chrono = { workspace = true }
paste = "1.0.15"
derive_more = { version = "2.0.1", features = ["full"] }
